@@ -1,5 +1,4 @@
-* disable wire compat by default
-  + error if no fma and --disable-fma not passed in wire-compat mode
+* error if no fma and --disable-fma not passed in wire-compat mode
 * changelog says that 1.0 non-wire-compat with 1.1 in non-mx-wire-compat mode
 
 * stop supporting mtu!=1500/9000 ?
